# llm-story-judge

./: README.md  SYSTEM_DIAGRAM.md  main.py  pyproject.toml  requirements.txt
src/story_agent/: __init__.py  cli.py  config.py  judge.py  orchestrator.py  storyteller.py
src/story_agent/prompts/: __init__.py  judge.py  request_gate.py  storyteller.py
src/story_agent/tools/: __init__.py  llm.py  text.py
